{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 866,
  "lineage": "47e459e8-8826-dda1-5c5e-a6177a4897f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088c6ba33b7de05e8",
            "association_id": "eipassoc-012092d57cfbe0d53",
            "domain": "vpc",
            "id": "eipalloc-088c6ba33b7de05e8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-044f0be2bd580ad01",
            "private_dns": "ip-10-0-0-81.ec2.internal",
            "private_ip": "10.0.0.81",
            "public_dns": "ec2-3-227-58-81.compute-1.amazonaws.com",
            "public_ip": "3.227.58.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c792a2bc32c0c98f",
            "association_id": "eipassoc-0d6d056579de7e137",
            "domain": "vpc",
            "id": "eipalloc-0c792a2bc32c0c98f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0acb428583baab34e",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-35-172-161-203.compute-1.amazonaws.com",
            "public_ip": "35.172.161.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:135808958462:instance/i-03d342424c84dc0e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d342424c84dc0e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa029b68d339a926",
            "private_dns": "ip-10-0-0-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.80",
            "public_ip": "34.204.18.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf5047680f2aa1cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0258acfc7f7a5e167",
            "tags": {
              "Name": "Bastion Server"
            },
            "tags_all": {
              "Name": "Bastion Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02979ef28b87c8638"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.webSg",
            "aws_subnet.pubsub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:internet-gateway/igw-04e59ae35f421006a",
            "id": "igw-04e59ae35f421006a",
            "owner_id": "135808958462",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:135808958462:loadbalancer/app/Load-balancer1/5ea3b823bd48920b",
            "arn_suffix": "app/Load-balancer1/5ea3b823bd48920b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Load-balancer1-12991929.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:135808958462:loadbalancer/app/Load-balancer1/5ea3b823bd48920b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Load-balancer1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02979ef28b87c8638"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0258acfc7f7a5e167"
              },
              {
                "subnet_id": "subnet-029cae562af9ed0ec"
              }
            ],
            "subnets": [
              "subnet-0258acfc7f7a5e167",
              "subnet-029cae562af9ed0ec"
            ],
            "vpc_id": "vpc-017e1d592d6c949ac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.webSg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:135808958462:listener/app/Load-balancer1/5ea3b823bd48920b/e84d3cff9a14aec8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:135808958462:targetgroup/TG1/c164866a712e4e65",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:135808958462:listener/app/Load-balancer1/5ea3b823bd48920b/e84d3cff9a14aec8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:135808958462:loadbalancer/app/Load-balancer1/5ea3b823bd48920b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_security_group.webSg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:135808958462:targetgroup/TG1/c164866a712e4e65",
            "arn_suffix": "targetgroup/TG1/c164866a712e4e65",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:135808958462:targetgroup/TG1/c164866a712e4e65",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:135808958462:loadbalancer/app/Load-balancer1/5ea3b823bd48920b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088c6ba33b7de05e8",
            "association_id": "eipassoc-012092d57cfbe0d53",
            "connectivity_type": "public",
            "id": "nat-08b0d48661d3d61c7",
            "network_interface_id": "eni-044f0be2bd580ad01",
            "private_ip": "10.0.0.81",
            "public_ip": "3.227.58.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0258acfc7f7a5e167",
            "tags": {
              "Name": "Nat1 VPC"
            },
            "tags_all": {
              "Name": "Nat1 VPC"
            }
          },
          "dependencies": [
            "aws_eip.nateip1",
            "aws_subnet.pubsub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c792a2bc32c0c98f",
            "association_id": "eipassoc-0d6d056579de7e137",
            "connectivity_type": "public",
            "id": "nat-07a790ac606cb19c2",
            "network_interface_id": "eni-0acb428583baab34e",
            "private_ip": "10.0.1.37",
            "public_ip": "35.172.161.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029cae562af9ed0ec",
            "tags": {
              "Name": "Nat2 VPC"
            },
            "tags_all": {
              "Name": "Nat2 VPC"
            }
          },
          "dependencies": [
            "aws_eip.nateip2",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTprv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:route-table/rtb-071c0b5cf9c6e7de6",
            "id": "rtb-071c0b5cf9c6e7de6",
            "owner_id": "135808958462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b0d48661d3d61c7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route1"
            },
            "tags_all": {
              "Name": "Private Route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip1",
            "aws_nat_gateway.nat1",
            "aws_subnet.pubsub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTprv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:route-table/rtb-09948a70953280dc9",
            "id": "rtb-09948a70953280dc9",
            "owner_id": "135808958462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a790ac606cb19c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route2"
            },
            "tags_all": {
              "Name": "Private Route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip2",
            "aws_nat_gateway.nat2",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RTpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:route-table/rtb-063fe9a6d0b6ea677",
            "id": "rtb-063fe9a6d0b6ea677",
            "owner_id": "135808958462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e59ae35f421006a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route"
            },
            "tags_all": {
              "Name": "Public Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fd57ce5d36e68b5",
            "route_table_id": "rtb-063fe9a6d0b6ea677",
            "subnet_id": "subnet-0258acfc7f7a5e167"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.RTpub",
            "aws_subnet.pubsub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aeeea801605739b",
            "route_table_id": "rtb-063fe9a6d0b6ea677",
            "subnet_id": "subnet-029cae562af9ed0ec"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.RTpub",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06134ed7bf1ebfb87",
            "route_table_id": "rtb-071c0b5cf9c6e7de6",
            "subnet_id": "subnet-07e98c1c2e93ccd39"
          },
          "dependencies": [
            "aws_eip.nateip1",
            "aws_nat_gateway.nat1",
            "aws_route_table.RTprv1",
            "aws_subnet.prvsub1",
            "aws_subnet.pubsub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c7c811c87c45996",
            "route_table_id": "rtb-09948a70953280dc9",
            "subnet_id": "subnet-04263acf703d1567f"
          },
          "dependencies": [
            "aws_eip.nateip2",
            "aws_nat_gateway.nat2",
            "aws_route_table.RTprv2",
            "aws_subnet.prvsub2",
            "aws_subnet.pubsub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:security-group/sg-02979ef28b87c8638",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02979ef28b87c8638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "135808958462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-sg"
            },
            "tags_all": {
              "Name": "Web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:subnet/subnet-07e98c1c2e93ccd39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e98c1c2e93ccd39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808958462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet1"
            },
            "tags_all": {
              "Name": "Private Subnet1"
            },
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:subnet/subnet-04263acf703d1567f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04263acf703d1567f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808958462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet2"
            },
            "tags_all": {
              "Name": "Private Subnet2"
            },
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:subnet/subnet-0258acfc7f7a5e167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0258acfc7f7a5e167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135808958462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet1"
            },
            "tags_all": {
              "Name": "Public Subnet1"
            },
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:subnet/subnet-029cae562af9ed0ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029cae562af9ed0ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135808958462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet2"
            },
            "tags_all": {
              "Name": "Public Subnet2"
            },
            "vpc_id": "vpc-017e1d592d6c949ac"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808958462:vpc/vpc-017e1d592d6c949ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019e822e42f71e80b",
            "default_route_table_id": "rtb-09c1c83666c25f706",
            "default_security_group_id": "sg-06a35ee0bd4bd151e",
            "dhcp_options_id": "dopt-0a83ddf78e05aeec1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017e1d592d6c949ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c1c83666c25f706",
            "owner_id": "135808958462",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}